# casadi-on-gpu

./: CMakeLists.txt  LICENSE  README.md
codegen/: dynamics_eval.casadi  generate_dynamics.ipynb
src/kernels/: dynamics_main.cu  kinematics_main.cu
src/wrappers/: device_dynamics_wrapper.cuh  device_fk_wrapper.cuh
